k8s/distributor-dep.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: distributor
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: distributor
    spec:
      containers:
      - name: distributor
        image: quay.io/cortexproject/cortex:v0.1.0
        imagePullPolicy: IfNotPresent
        args:
        - -target=distributor
        - -log.level=debug
        - -server.http-listen-port=80
        - -consul.hostname=consul.cortex.svc.cluster.local:8500
        - -distributor.replication-factor=1
        ports:
        - containerPort: 80
