k8s/querier-dep.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: querier
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: querier
    spec:
      containers:
      - name: querier
        image: quay.io/cortexproject/cortex:v0.1.0
        imagePullPolicy: IfNotPresent
        args:
        - -target=querier
        - -server.http-listen-port=80
        - -consul.hostname=consul.cortex.svc.cluster.local:8500
        - -s3.url=s3://F4JOOGKW7YNVMCHFIQKZ:zuXW7iPaD0aye6H7V7bPyCTzqyecuIvyOK9QZDYPaD8@chunkstore01.sfo2.digitaloceanspaces.com
        - -querier.frontend-address=query-frontend.cortex.svc.cluster.local:9095
        - -dynamodb.original-table-name=cortex
        - -dynamodb.url=dynamodb://user:pass@dynamodb.cortex.svc.cluster.local:8000
        - -dynamodb.periodic-table.prefix=cortex_weekly_
        - -dynamodb.periodic-table.from=2017-01-06
        - -dynamodb.daily-buckets-from=2017-01-10
        - -dynamodb.base64-buckets-from=2017-01-17
        - -dynamodb.v4-schema-from=2017-02-05
        - -dynamodb.v5-schema-from=2017-02-22
        - -dynamodb.v6-schema-from=2017-03-19
        - -memcached.hostname=memcached.cortex.svc.cluster.local
        - -memcached.timeout=100ms
        - -memcached.service=memcached
        - -distributor.replication-factor=1
        ports:
        - containerPort: 80
