k8s/retrieval-dep.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: retrieval
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: retrieval
    spec:
      serviceAccountName: retrieval
      containers:
      - name: retrieval
        image: prom/prometheus:v2.8.0
        imagePullPolicy: IfNotPresent
        args:
        - --config.file=/etc/prometheus/prometheus.yml
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: config-volume
          mountPath: /etc/prometheus
      volumes:
        - name: config-volume
          configMap:
            name: retrieval-config
