k8s/table-manager-dep.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: table-manager
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: table-manager
    spec:
      containers:
      - name: table-manager
        image: quay.io/cortexproject/cortex:v0.1.0
        imagePullPolicy: IfNotPresent
        args:
        - -target=table-manager
        - -server.http-listen-port=80
        - -dynamodb.original-table-name=cortex
        - -dynamodb.url=dynamodb://user:pass@dynamodb.cortex.svc.cluster.local:8000
        - -dynamodb.periodic-table.prefix=cortex_weekly_
        - -dynamodb.periodic-table.from=2017-01-06
        - -dynamodb.chunk-table.from=2017-04-17
        ports:
        - containerPort: 80
